--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ALPHA_VANTAGE_API_KEY=AN1K41U74AOV5FHA
+ALPHA_VANTAGE_API_KEY=****
 EMAIL_USER=your_email
 EMAIL_PASS=your_email_password
 SMTP_HOST=smtp.example.com
